--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,6 +6,8 @@
     <title>Chat</title>
     <link href="./src/App.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/svg+xml" href="/furia.svg" />
+
 
   </head>
   <body>
